clean up / better gui