@@ -13,6 +13,20 @@ Folgende Werte sind im Provider-Modus zwingend:
 - `textbuddy.llm.api-key`
 - `textbuddy.llm.model`
 
+Optional:
+
+- `textbuddy.llm.health-probe-enabled=false`
+
+Der LLM-Health-Check prüft standardmässig nur die Konfiguration. Mit `textbuddy.llm.health-probe-enabled=true` wird zusätzlich eine echte Chat-Completion gegen den konfigurierten Provider ausgeführt.
+
+Infomaniak kann über den OpenAI-kompatiblen Endpunkt angebunden werden:
+
+```properties
+textbuddy.llm.base-url=https://api.infomaniak.com/2/ai/<project-id>/openai/v1
+textbuddy.llm.model=qwen3
+textbuddy.llm.api-key=<nicht-einchecken>
+```
+
 ## Sidecar-freier Standardbetrieb
 
 Der dokumentierte Standardpfad bleibt ohne externe Sidecars:
@@ -32,3 +46,11 @@ Lokale Laufzeitressourcen werden über diese Properties gesteuert:
 Das optionale Startskript im ZIP-Installer unterstützt zusätzliche JVM-Parameter über:
 
 - `TEXTBUDDY_JAVA_OPTS`
+
+Für Java 25 und lokale OCR-/Dokumentbibliotheken kann bei Native-Access-Warnungen dieser Startparameter nötig sein:
+
+```bash
+TEXTBUDDY_JAVA_OPTS="--enable-native-access=ALL-UNNAMED"
+```
+
+OCR setzt installierte Tesseract-Sprachdaten für die genutzten Sprachen voraus. Fehlende Sprachdaten blockieren den App-Start nicht, können aber gescannte Importe verschlechtern oder OCR-Warnungen verursachen.
